Fix style of footer and add margin on mobile to input groups

--- a/ui-src/css/components/_footer.styl
+++ b/ui-src/css/components/_footer.styl
@@ -2,13 +2,13 @@
 footer 
   border-top solid 1px $col-footer-bg
   background-color $col-dirty-white
+  display flex
+  min-height 150px
+  justify-content center
+  align-items center
   a 
    color var(--bs-gray-600);
    &:hover 
     color black 
     text-decoration underline
-  > div 
-    display flex
-    min-height 150px
-    justify-content center
-    align-items center
+    
